Several minor fixes. (#82)
* Fixed some scaffolding templates.
  * Use newer Java 11 functions.
  * Extracted some common code.
  * Fixed a probable NPE.
  * Miscellaneous code cleanups.